@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 14,
+  "count": 23,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-08-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 9,
