@@ -1,3 +1,11 @@
+2022-09-05T16:03:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994651829
+* notice: last 14d: unq all: 13 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 43 51 / 63 76
+* notice: next accum: outdated-unq outdated-all / unq all: 44 53 / 63 76
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-22] / []
+
 2022-09-05T08:07:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991662240
 * notice: last 14d: unq all: 14 25
